# try_pipelining

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_tests.yml
configs/: pipeline_config.yaml  pipeline_config_2.yaml
tests/: test_pipeline.py
try_pipelining/: data_models.py  observation_windows.py  parameter.py  pipelines.py  post_actions.py  tasks.py
